--- a/dom_ejercicios.html
+++ b/dom_ejercicios.html
@@ -23,7 +23,7 @@
     
     <aside class="panel">
         <nav class="menu">
-            <a href="#seccion1">Sección 1</a>
+            <a href="#seccion1">Reloj digital y alarma sonora</a>
             <a href="#seccion2">Sección 2</a>
             <a href="#seccion3">Sección 3</a>
             <a href="#seccion4">Sección 4</a>
@@ -32,10 +32,16 @@
     </aside>
     <main>
         <section id="seccion1" class="section">
-            <h2>Sección 1</h2>
+            <h2>Reloj digital y alarma sonora</h2>
+            <div id="reloj">
+            </div>
+           <button id="activar-reloj">Iniciar reloj</button>
+           <button id="desactivar-reloj">Detener reloj</button>
+           <button id="activar-alarma">Iniciar alarma</button>
+           <button id="desactivar-alarma">Detener alarma</button> 
         </section>
         <section id="seccion2" class="section">
-            <h2>Sección 2</h2>
+            <h2>Eventos del Teclado</h2>
         </section>
         <section id="seccion3" class="section">
             <h2>Sección 3</h2>
